fix dark mode

--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,30 @@ body,
 h1, h2 {
     font-family: "Raleway", sans-serif;
 }
+:root {
+    color-scheme: light dark; /* both supported */
+}
+
+body {
+    --text-color: #2B2B2B;
+    --bkg-color: #FAF9F6;
+  }
+body.dark-theme {
+    --text-color: #eee;
+    --bkg-color: #2B2B2B;
+}
+
+@media (prefers-color-scheme: dark) {
+    /* defaults to dark theme */
+    body {
+      --text-color: #eee;
+      --bkg-color: #2B2B2B;
+    }
+    body.light-theme {
+      --text-color: #2B2B2B;
+      --bkg-color: #FAF9F6;
+    }
+}
 
 .lite {
     background-color: white;
@@ -12,12 +36,18 @@ h1, h2 {
     background-color: #2B2B2B;
     color: white;
 }
+.text-container {
+    height: 100%;
+    margin-top: 25px;
+}
 
 body,
 html {
     height: 100%;
     /* background-color: lightgreen; */
+    background: var(--bkg-color);
 }
+p, h1, h2 { color: var(--text-color); }
 
 .bgimg {
     background-image: url('/w3images/forestbridge.jpg');
